{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 42,
  "lineage": "05a57b91-a609-74d6-d13b-11d9c3619337",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-12-17T05:46:19.594-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/massive-sandbox-477717-k3/global/firewalls/staging-vpc-staging-allow-http",
            "log_config": [],
            "name": "staging-vpc-staging-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/massive-sandbox-477717-k3/global/networks/staging-staging-vpc",
            "params": [],
            "priority": 1000,
            "project": "massive-sandbox-477717-k3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/massive-sandbox-477717-k3/global/firewalls/staging-vpc-staging-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "http"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-12-17T05:46:19.379-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/massive-sandbox-477717-k3/global/firewalls/staging-vpc-staging-allow-https",
            "log_config": [],
            "name": "staging-vpc-staging-allow-https",
            "network": "https://www.googleapis.com/compute/v1/projects/massive-sandbox-477717-k3/global/networks/staging-staging-vpc",
            "params": [],
            "priority": 1000,
            "project": "massive-sandbox-477717-k3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/massive-sandbox-477717-k3/global/firewalls/staging-vpc-staging-allow-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "https"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2025-12-17T05:46:19.043-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/massive-sandbox-477717-k3/global/firewalls/staging-vpc-staging-allow-internal",
            "log_config": [],
            "name": "staging-vpc-staging-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/massive-sandbox-477717-k3/global/networks/staging-staging-vpc",
            "params": [],
            "priority": 1000,
            "project": "massive-sandbox-477717-k3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/massive-sandbox-477717-k3/global/firewalls/staging-vpc-staging-allow-internal",
            "source_ranges": [
              "10.20.0.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-12-17T05:46:19.575-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/massive-sandbox-477717-k3/global/firewalls/staging-vpc-staging-allow-ssh",
            "log_config": [],
            "name": "staging-vpc-staging-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/massive-sandbox-477717-k3/global/networks/staging-staging-vpc",
            "params": [],
            "priority": 1000,
            "project": "massive-sandbox-477717-k3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/massive-sandbox-477717-k3/global/firewalls/staging-vpc-staging-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "description": "Primary VPC for staging workloads",
            "enable_ula_internal_ipv6": false,
            "id": "projects/massive-sandbox-477717-k3/global/networks/staging-staging-vpc",
            "mtu": 0,
            "name": "staging-staging-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "7647999695287945980",
            "numeric_id": "7647999695287945980",
            "project": "massive-sandbox-477717-k3",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/massive-sandbox-477717-k3/global/networks/staging-staging-vpc"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-12-17T05:46:20.008-08:00",
            "encrypted_interconnect_router": false,
            "id": "projects/massive-sandbox-477717-k3/regions/us-central1/routers/staging-vpc-staging-router",
            "name": "staging-vpc-staging-router",
            "network": "https://www.googleapis.com/compute/v1/projects/massive-sandbox-477717-k3/global/networks/staging-staging-vpc",
            "project": "massive-sandbox-477717-k3",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/massive-sandbox-477717-k3/regions/us-central1/routers/staging-vpc-staging-router"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "massive-sandbox-477717-k3/us-central1/staging-vpc-staging-router/staging-vpc-staging-nat",
            "log_config": [
              {
                "enable": true,
                "filter": "ERRORS_ONLY"
              }
            ],
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "staging-vpc-staging-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "massive-sandbox-477717-k3",
            "region": "us-central1",
            "router": "staging-vpc-staging-router",
            "source_subnetwork_ip_ranges_to_nat": "LIST_OF_SUBNETWORKS",
            "subnetwork": [
              {
                "name": "https://www.googleapis.com/compute/v1/projects/massive-sandbox-477717-k3/regions/us-central1/subnetworks/stg-subnet-staging",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              }
            ],
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "type": "PUBLIC",
            "udp_idle_timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc",
            "module.network.google_compute_router.router",
            "module.network.google_compute_subnetwork.private"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-12-17T05:46:20.003-08:00",
            "enable_flow_logs": false,
            "gateway_address": "10.20.0.1",
            "id": "projects/massive-sandbox-477717-k3/regions/us-central1/subnetworks/stg-subnet-staging",
            "ip_cidr_range": "10.20.0.0/20",
            "name": "stg-subnet-staging",
            "network": "https://www.googleapis.com/compute/v1/projects/massive-sandbox-477717-k3/global/networks/staging-staging-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "massive-sandbox-477717-k3",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.48.0.0/14",
                "range_name": "gke-stg-gke-pods-cde32e0a"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/massive-sandbox-477717-k3/regions/us-central1/subnetworks/stg-subnet-staging",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 8055613029643913924
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}